# bye-bye-boss-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/cli/: __init__.py  __main__.py  generator.py
app/cli/templates/module/: __init__.py.tmpl  models.py.tmpl  repository.py.tmpl  schemas.py.tmpl  service.py.tmpl
app/core/: __init__.py  cache.py  config.py  database.py  dependencies.py  events.py  exceptions.py  handlers.py  logging.py  middleware.py  models.py  module.py  pagination.py  ratelimit.py  repository.py  scheduler.py  schemas.py  security.py
app/modules/: __init__.py
app/modules/auth/: __init__.py  dependencies.py  events.py  gateway.py  listeners.py  models.py  repository.py  schemas.py  seed.py  service.py
app/modules/auth/routes/v1/: auth_routes.py  user_routes.py
app/modules/leads/: __init__.py  emails.py  events.py  models.py  repository.py  schemas.py  service.py
app/modules/leads/routes/v1/: lead_routes.py
app/modules/mailer/: __init__.py  gateway.py  jobs.py  models.py  repository.py  service.py  startup.py  templating.py  transport.py
app/modules/mailer/templates/: base.html
app/modules/mailer/transports/: __init__.py  mailgun.py  smtp.py
deploy/: deploy.sh  install.sh
docker/: entrypoint.sh
migrations/: env.py  script.py.mako
migrations/versions/: 47b6a179d2de_add_leads_and_email_queue.py  65be8662e3fe_initial_schema.py  d55d7f12fae8_initial_schema.py
tests/: conftest.py  test_architecture.py  test_health.py
tests/modules/: test_auth.py  test_leads.py  test_mailer_transports.py  test_ratelimit.py
(+7 files in other folders)
